Add ESP32 physical target support
